spacing fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,7 +325,7 @@ p {
      list-style: none;
    }
    .fictionlinks li {
-     padding-left: 1.5em;
+     padding-left: 1em;
      position: relative;
 
    }
